# scene_labeling_phd

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO.txt  app.py  demo.py  demo_config.ini  level_one_summaries.py  level_two_summaries.py  metadata.py  object_detection.py
level_one_utils/hof_matlab_source/lib_hof/: .project  Makefile.in  README  config.status  configure  configure.ac  libtool
level_one_utils/hof_matlab_source/lib_hof/.svn/: entries
level_one_utils/hof_matlab_source/lib_hof/.svn/text-base/: Makefile.am.svn-base  Makefile.svn-base  config.log.svn-base  lib_hof-1.0.0.tar.gz.svn-base
level_one_utils/hof_matlab_source/lib_hof/config/.svn/: entries
level_one_utils/hof_matlab_source/lib_hof/doc/.svn/: entries
level_one_utils/hof_matlab_source/lib_hof/doc/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  Makefile.svn-base
level_one_utils/hof_matlab_source/lib_hof/src/.svn/: entries
level_one_utils/hof_matlab_source/lib_hof/src/pascal/: FHistogramVectorV2.01.c
level_one_utils/hof_matlab_source/lib_hof/src/pascal/.svn/: entries
level_one_utils/hof_matlab_source/lib_hof/src/raster/: F02Histogram_FuzzyRaster.cpp  FRHistogram_CrispRaster.cpp  HoF_Raster.hpp  Makefile.am
level_one_utils/hof_matlab_source/lib_hof/src/vector/: HoF_Vector.cpp  HoF_Vector_Structs.hpp
level_one_utils/hof_matlab_source/lib_hof/tests/: .nfs00000000000325b800000087  HoFVectorTestSuite.hpp  above.tif  below.tif  half_intersect.tif  right.tif  small.tif  small_middle.tif  small_top_left.tif
level_one_utils/hof_matlab_source/lib_hof/tests/.svn/: entries
(+192 files in other folders)
